# gfs_down

./: .gitignore  LICENSE  README.md  config.yaml  main.py  pyproject.toml
src/gfsdown/: __init__.py  config.py  downloader.py  index_parser.py  plotter.py  slicer.py
